<resources>
    <string name="app_name">Staza</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="Submit">Submit</string>
    <string name="EnterOldPassword">Enter Old Password</string>
    <string name="EnterNewPassword">Enter New Password</string>
    <string name="ViewCode">View Code</string>
    <string name="ChangePassword">Change Password</string>
    <string name="GenerateNewCode">Generate New Code</string>
    <string name="ConfirmNewPassword">Confirm New Password</string>
    <string name="StazaLogo">Staza Logo</string>
</resources>
