<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.staza.jpg.staza.MainActivity">

    <Button
        android:id="@+id/view_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/ViewCode" />

    <Button
        android:id="@+id/change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ChangePassword" />

    <Button
        android:id="@+id/new_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/change_pass"
        android:layout_alignStart="@+id/change_pass"
        android:layout_below="@+id/change_pass"
        android:layout_marginTop="42dp"
        android:text="@string/GenerateNewCode" />
</RelativeLayout>
