<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.staza.jpg.staza.ChangePassword">

    <TextView
        android:id="@+id/old_passtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:text="@string/EnterOldPassword" />

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_passtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/new_passtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/old_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/EnterNewPassword" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/old_pass"
        android:layout_alignStart="@+id/old_pass"
        android:layout_below="@+id/new_passtext"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/Submit" />
</RelativeLayout>
