<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.staza.jpg.staza.Register">

    <TextView
        android:id="@+id/new_pass_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:text="@string/EnterNewPassword" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_pass_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/new_pass_cnf_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/ConfirmNewPassword" />

    <EditText
        android:id="@+id/new_pass_cnf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_pass"
        android:layout_alignStart="@+id/new_pass"
        android:layout_below="@+id/new_pass_cnf_view"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:inputType="numberPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_pass_cnf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/Submit" />
</RelativeLayout>
